--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,91 @@
-# Ignore Gradle project-specific cache directory
-.gradle
+# ---------------------------------
+# Java
+# ---------------------------------
+*.class
+*.log
+*.ctxt
+*.jar
+*.war
+*.ear
+*.nar
+*.zip
+*.tar.gz
+*.rar
 
-# Ignore Gradle build output directory
-build
+# BlueJ
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.class
+*.apk
+*.ap_
+
+# Crash logs
+hs_err_pid*
+replay_pid*
+
+# ---------------------------------
+# Maven
+# ---------------------------------
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+# ---------------------------------
+# Gradle
+# ---------------------------------
+.gradle/
+build/
+!gradle-wrapper.jar
+.gradle-cache/
+
+# ---------------------------------
+# Eclipse
+# ---------------------------------
+.classpath
+.project
+.settings/
+bin/
+
+# ---------------------------------
+# IntelliJ IDEA
+# ---------------------------------
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+# ---------------------------------
+# NetBeans
+# ---------------------------------
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# ---------------------------------
+# VS Code
+# ---------------------------------
+.vscode/
+
+# ---------------------------------
+# OS / Misc
+# ---------------------------------
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+*.tmp
